--- a/assets/embed.css
+++ b/assets/embed.css
@@ -1,5 +1,4 @@
 body {
-  background-color: lavender;
   margin: 0; /* required for correct iframe resizing */
   padding: 5px;
 }
@@ -15,13 +14,9 @@ body {
 }
 
 .link{
-  margin: 10px;
-  padding: 10px;
-  border: 4px solid #633073;
-  border-right-color: #ba94c7;
-  border-top-color: #ba94c7;
-  background-color: #753988;
-  color: white;
+  margin: .5rem;
+  padding:.5rem;
+  border: 2px solid black;
 }
 
 .site-name {
