--- a/assets/alternate-embed.css
+++ b/assets/alternate-embed.css
@@ -2,10 +2,15 @@ body {
   background-color: transparent;
   margin: 0;
   padding: 5px;
+  font-family: monospace;
 }
 
 .badge {
   text-align: center;
+}
+
+.badge::before,.badge::after {
+  content: " 🪐 ";
 }
 
 .links {
@@ -15,15 +20,15 @@ body {
 }
 
 .link{
-  margin: 10px;
-  padding: 10px;
-  border: 4px double #00ff00;
-  color: #00ff00;
+  margin: .5em;
+  padding: .5empx;
+  border: 4px solid #ffcc00;
+  color: #3273dc;
 }
 
 .link:visited {
-  border-color: #398a17;
-  color: #398a17;
+  border-color: #000;
+  color: #3273dc;
 }
 
 .site-name {
