--- a/assets/alternate-embed.css
+++ b/assets/alternate-embed.css
@@ -48,7 +48,11 @@ body {
     color: #8cc2dd;
   }
   body {
-    box-shadow:0px 0px 0 1px inset white;
-    color: white;
+    box-shadow:0px 0px 0 1px inset #eee;
+    color: #eee;
+
+  }
+  .link:visited{
+    border-color: #eee;
   }
 }
